# multi-app-playwright-test-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  Taskfile.yml  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: principles.mdc  python.mdc
.cursor/skills/adr-writer/: SKILL.md
.cursor/skills/allure-report-enhancer/: SKILL.md
.cursor/skills/code-quality-standards/: SKILL.md
.cursor/skills/dockerfile-test-automation/: SKILL.md
.cursor/skills/github-actions-test-pipeline/: SKILL.md
.cursor/skills/locust-performance-test/: SKILL.md
.cursor/skills/playwright-page-object-generator/: SKILL.md
.cursor/skills/pytest-test-scaffolder/: SKILL.md
.cursor/skills/workflow-pattern-generator/: SKILL.md
.githooks/: post-merge  pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: code-quality.yml  tests.yml
docs/arch/: ard-001-playwright-selection.md  ard-002-code-quality-infrastructure.md  ard-003-git-strategy.md  ard-003-pre-commit.md  ard-004-ai-skills.md  ard-004-git-strategy.md
pages/saucedemo/: locators.py
tests/saucedemo/: conftest.py
tests/the_internet/: conftest.py
tests/ui_playground/: conftest.py
utils/: log_helpers.py
